--- a/html/sign_in.html
+++ b/html/sign_in.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-    <style>
-       
-    </style>
+    <link rel="stylesheet" href="D:\SPCK\css\style.css">
 </head>
 <body>
     <form class="signin-form">
