--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <header>
-        
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="register.html">Register</a></li>
+            <li><a href="sign_in.html">Sign In</a></li>
     </header>
 </body>
 </html>
