--- a/html/sign_in.html
+++ b/html/sign_in.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In</title>
-    <link rel="stylesheet" href="\css\style.css">
+    <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
     <form class="signin-form">
         <h2>Sign In</h2>
         <input type="text" name="username" placeholder="Username" required>
         <input type="password" name="password" placeholder="Password" required>
-        <input type="submit" value="Sign In">
-    </form>
+        <input type="checkbox" name="remember_me" id="remember_me">
+        <label for="remember_me">Remember Me</label>
+        <button type="submit">Sign In</button>
 </body>
 </html>
