--- a/html/register.html
+++ b/html/register.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="\css\style.css">
 </head>
 <body>
-    <form class="register-form">
+    <form class="register-form" action="index.html" method="post">
         <h2>Register</h2>
         <input type="text" name="username" placeholder="Username" required>
         <input type="email" name="email" placeholder="Email" required>
