--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,15 @@
   </head>
   <body>
     <header>
-      <div class="navbar">
+      <div class="nav-bar">
         <a href="index.html">Home</a>
         <a href="register.html">Register</a>
         <a href="sign_in.html">Sign In</a>
       </div>
     </header>
+    <main>
+      <h1>Welcome to our website</h1>
+      <p>
+    </main>
   </body>
 </html>
