--- a/html/index.html
+++ b/html/index.html
@@ -15,8 +15,14 @@
       </div>
     </header>
     <main>
-      <h1>Welcome to our website</h1>
-      <p>
+      <div class="container">
+        
+      </div>
     </main>
+    <footer>
+      <div class="footer">
+        <p>&copy; 2021</p>
+      </div>
+    </footer>
   </body>
 </html>
