--- a/html/index.html
+++ b/html/index.html
@@ -16,12 +16,18 @@
     </header>
     <main>
       <div class="container">
-        
+        <div class="title">
+          <h1>Artist Library</h1>
+          <h2>The one place to know it all</h2>
+        </div>
+        <div class="content">
+          
+        </div>
       </div>
     </main>
     <footer>
       <div class="footer">
-        <p>&copy; 2021</p>
+        <p>&copy; 2025</p>
       </div>
     </footer>
   </body>
