--- a/html/index.html
+++ b/html/index.html
@@ -20,9 +20,7 @@
           <h1>Artist Library</h1>
           <h2>The one place to know it all</h2>
         </div>
-        <div class="content">
-          
-        </div>
+        <div class="content"></div>
       </div>
     </main>
     <footer>
