--- a/html/sign_in.html
+++ b/html/sign_in.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign In</title>
-    <link rel="stylesheet" href="../css/sign_in.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/sign_in.css" />
+  </head>
+  <body>
     <form class="signin-form" action="index.html" method="post">
-        <h2>Sign In</h2>
-        <input type="text" name="username" placeholder="Username" required>
-        <input type="password" name="password" placeholder="Password" required>
-        <input type="submit" value="Sign In">
+      <h2>Sign In</h2>
+      <input type="text" name="username" placeholder="Username" required />
+      <input type="password" name="password" placeholder="Password" required />
+      <input type="submit" value="Sign In" />
     </form>
-</body>
+  </body>
 </html>
