--- a/html/index.html
+++ b/html/index.html
@@ -5,25 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artist Library</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://kit.fontawesome.com/444b27dfe0.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="nav-bar">
         <a href="index.html">Home</a>
         <a href="register.html">Register</a>
         <a href="sign_in.html">Sign In</a>
       </div>
+    </header> -->
+    <header class="colored-section">
+      <div class="container-fluid">
+        <!-- Navigation bar  -->
+        <nav class="navbar-header navbar navbar-expand-lg bg-body-tertiary">
+          <a class="navbar-brand" href="#">Artist Library</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+          <i class="fa-solid fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="register.html">Register</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="sign_in.html">Sign in</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="title-header">
+          <div class="row">
+            <div class="col-lg-6">
+              <h1 class="big-heading">
+                Artist Library
+              </h1>
+              <h2 class="text-body-secondary">The one place to know it all</>
+            </div>
+          </div>
+        </div>
+      </div>
+      </header>
     </header>
+
     <main>
-      <div class="container">
+      <!-- <div class="container">
         <div class="title">
           <h1>Artist Library</h1>
           <h2>The one place to know it all</h2>
         </div>
-        <div class="content">
-          
-        </div>
-      </div>
+        <div class="content"></div>
+      </div> -->
     </main>
     <footer>
       <div class="footer">
