--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artist Library</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -71,6 +71,27 @@
     </header>
 
     <main>
+      <section class="features white-section">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="feature-box col-lg-4">
+                    <i class=" fa-solid fa-check-circle"></i>
+                    <h3 class="feature-title">Large Database of Information</h3>
+                    <p>Lots of artist, lots of information</p>
+                </div>
+                <div class="feature-box col-lg-4">
+                    <i class="fa-solid fa-heart fa-spin"></i>
+                    <h3 class="feature-title">Their best works are linked </h3>
+                    <p></p>
+                </div>
+                <div class="feature-box col-lg-4">
+                    <i class="fa fa-bullseye"></i>
+                    <h3 class="feature-title">Elite Clientele</h3>
+                    <p>We have all the dogs, the greatest dogs.</p>
+                </div>
+            </div>
+        </div>
+    </section>
       <!-- <div class="container">
         <div class="title">
           <h1>Artist Library</h1>
