--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,10 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="https://kit.fontawesome.com/444b27dfe0.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/444b27dfe0.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- <header>
@@ -40,7 +43,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-          <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
@@ -59,46 +62,88 @@
         <div class="title-header">
           <div class="row">
             <div class="col-lg-6">
-              <h1 class="big-heading">
-                Artist Library
-              </h1>
-              <h2 class="text-body-secondary">The one place to know it all</>
+              <h1 class="big-heading">Artist Library</h1>
+              <h2 class="text-body-secondary">The one place to know it all</h2>
             </div>
           </div>
         </div>
       </div>
-      </header>
     </header>
 
     <main>
       <section class="features white-section">
         <div class="container-fluid">
-            <div class="row">
-                <div class="feature-box col-lg-4">
-                    <i class=" fa-solid fa-check-circle"></i>
-                    <h3 class="feature-title">Large Database of Information</h3>
-                    <p>Lots of artist, lots of information</p>
-                </div>
-                <div class="feature-box col-lg-4">
-                    <i class="fa-solid fa-heart fa-spin"></i>
-                    <h3 class="feature-title">Their best works are linked </h3>
-                    <p></p>
-                </div>
-                <div class="feature-box col-lg-4">
-                    <i class="fa fa-bullseye"></i>
-                    <h3 class="feature-title">Elite Clientele</h3>
-                    <p>We have all the dogs, the greatest dogs.</p>
-                </div>
+          <div class="row">
+            <div class="feature-box col-lg-4">
+              <i class="fa-solid fa-box-archive"></i>
+              <h3 class="feature-title">Large Database</h3>
+              <p>
+                There are many artists in our database to choose from and to
+                discover.
+              </p>
             </div>
+            <div class="feature-box col-lg-4">
+              <i class="fa-solid fa-compact-disc"></i>
+              <h3 class="feature-title">Their best works are linked</h3>
+              <p>
+                You could easily find the album which you like from your
+                favorite artists.
+              </p>
+            </div>
+            <div class="feature-box col-lg-4">
+              <i class="fa-solid fa-wand-magic"></i>
+              <h3 class="feature-title">Easy to use</h3>
+              <p>
+                The interface was thoroughly design to be used as easily as
+                possible
+              </p>
+            </div>
+          </div>
         </div>
-    </section>
-      <!-- <div class="container">
-        <div class="title">
-          <h1>Artist Library</h1>
-          <h2>The one place to know it all</h2>
+      </section>
+      <!-- Testimonial  -->
+      <section class="testimonial colored-section">
+        <h1 class="big-heading">Get started</h1>
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active container-fluid">
+              <h2>
+                I no longer have to sniff other dogs for love. I've found the
+                hottest Corgi on DogSocial. Woof.
+              </h2>
+              <img src="../resources/Kendrick_Lamar.webp">
+              <em>Pebbles, New York</em>
+            </div>
+            <div class="carousel-item container-fluid">
+              <h2>
+                My dog used to be so lonely, but with DogSocial's help, they've
+                found the love of their life. I think.
+              </h2>
+              <img src="images/lady-img.jpg" alt="lady-profile" />
+              <em>Beverly, Illinois</em>
+            </div>
+          </div>
+
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
-        <div class="content"></div>
-      </div> -->
+      </section>
     </main>
     <footer>
       <div class="footer">
