--- a/html/index.html
+++ b/html/index.html
@@ -103,16 +103,21 @@
       </section>
       <!-- Testimonial  -->
       <section class="testimonial colored-section">
-        <h1 class="big-heading">Get started</h1>
+        <h1 class="text-body-secondary">Get started</h1>
         <div id="carouselExample" class="carousel slide">
           <div class="carousel-inner">
             <div class="carousel-item active container-fluid">
               <h2>
-                I no longer have to sniff other dogs for love. I've found the
-                hottest Corgi on DogSocial. Woof.
+                Kendrick Lamar Duckworth (born June 17, 1987) is an American
+                rapper. Regarded as one of the most influential hip-hop artists
+                of his generation, and one of the greatest rappers of all time,
+                he is known for his technical artistry and complex songwriting.
+                He was awarded the 2018 Pulitzer Prize for Music, becoming the
+                first musician outside of the classical and jazz genres to
+                receive the honor.
               </h2>
-              <img src="../resources/Kendrick_Lamar.webp">
-              <em>Pebbles, New York</em>
+              <img src="../resources/Kendrick_Lamar.webp" />
+              <a href="1.html"><em>Kendrick Lamar</em></a>
             </div>
             <div class="carousel-item container-fluid">
               <h2>
