--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,6 @@
     ></script>
   </head>
   <body>
-
     <header class="colored-section">
       <div class="container-fluid">
         <!-- Navigation bar  -->
@@ -110,17 +109,46 @@
                 first musician outside of the classical and jazz genres to
                 receive the honor.
               </h2>
-              <img src="../resources/Kendrick_Lamar.webp" />
+              <img
+                src="../resources/Kendrick_Lamar.webp"
+                alt="Kendrick Lamar"
+              />
               <a href="1.html"><em>Kendrick Lamar</em></a>
             </div>
+
             <div class="carousel-item container-fluid">
               <h2>
-                My dog used to be so lonely, but with DogSocial's help, they've
-                found the love of their life. I think.
+                Tyler Gregory Okonma (born March 6, 1991), known professionally
+                as Tyler, the Creator, is an American rapper, singer, and record
+                producer. He has been cited as an influential figure in
+                alternative hip hop during the 2010s. Okonma became well known
+                in the late 2000s, when he emerged on the internet as the leader
+                and co-founder of the music collective Odd Future. Within the
+                group, Okonma participated as a rapper, producer, director and
+                actor, releasing studio albums that he produced for its
+                respective members. Okonma also performed on his sketch comedy
+                show Loiter Squad (2012–2014).
               </h2>
-              <img src="images/lady-img.jpg" alt="lady-profile" />
-              <em>Beverly, Illinois</em>
+              <img src="../resources/tyler.webp" 
+                   alt="Tyler, the Creator" 
+              />
+              <a href="#"><em>Tyler, the Creator</em></a>
             </div>
+
+            <div class="carousel-item container-fluid">
+              <h2>
+                Kanye Omari West (born June 8, 1977) is an American rapper,
+                singer, songwriter, record producer, and fashion designer. He
+                has been influential in the 21st-century development of popular
+                music and has been credited with revitalizing hip hop. West's
+                musical career has been marked by frequent stylistic
+                changes and different musical approaches. Born in Atlanta and
+                raised in Chicago, West gained fame as a producer for Roc-A-Fella
+                Records in the early 2000s, producing singles for several
+                mainstream artists.
+              </h2>
+              <img src="../resources/kanye.jfif" alt="Kanye West" />
+              <a href="#"><em>Kanye West</em></a>
           </div>
 
           <button
