update resources and modified html files

--- a/html/1.html
+++ b/html/1.html
@@ -52,6 +52,68 @@
         <h1 class="big-heading">Kendrick Lamar</h1>
         <p class="text-body-secondary">Noteable albums</p>
       </section>
+
+      <div
+        id="carouselExampleInterval"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="10000">
+            <img
+              src="../resources/KendrickGKMC.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item" data-bs-interval="2500">
+            <img
+              src="../resources/Kendrick_Lamar_-_To_Pimp_a_Butterfly.png"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item" data-bs-interval="2500">
+            <img
+              src="../resources/Kendrick_Lamar_-_Damn.png"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item" data-bs-interval="2500">
+            <img
+              src="../resources/Kendrick_Lamar_-_Mr._Morale_&_the_Big_Steppers.png"
+              class="d-block w-100"
+              alt="..."
+            /></div>
+          <div class="carousel-item" data-bs-interval="2500">
+            <img
+              src="../resources/Kendrick_Lamar_-_GNX.png"
+              class="d-block w-100"
+              alt="..."
+            />
+            
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleInterval"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleInterval"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </main>
   </body>
 </html>
