--- a/html/index.html
+++ b/html/index.html
@@ -110,10 +110,10 @@
                 receive the honor.
               </h2>
               <img
-                src="../resources/Kendrick_Lamar.webp"
+                src="../resources/Kendrick Lamar/Kendrick_Lamar.webp"
                 alt="Kendrick Lamar"
               />
-              <a href="1.html"><em>Kendrick Lamar</em></a>
+              <a href="Kendrick_Lamar.html"><em>Kendrick Lamar</em></a>
             </div>
 
             <div class="carousel-item container-fluid">
@@ -171,7 +171,6 @@
           </button>
         </div>
       </section>
-      <br><br><br><br><br><br>
     </main>
     <footer>
       <div class="footer">
