--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artist Library</title>
-    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -110,7 +110,7 @@
                 receive the honor.
               </h2>
               <img
-                src="../resources/Kendrick Lamar/Kendrick_Lamar.webp"
+                src="resources/Kendrick Lamar/Kendrick_Lamar.webp"
                 alt="Kendrick Lamar"
               />
               <a href="Kendrick_Lamar.html"><em>Kendrick Lamar</em></a>
@@ -129,7 +129,7 @@
                 respective members. Okonma also performed on his sketch comedy
                 show Loiter Squad (2012–2014).
               </h2>
-              <img src="../resources/tyler.webp" 
+              <img src="resources/tyler.webp" 
                    alt="Tyler, the Creator" 
               />
               <a href="#"><em>Tyler, the Creator</em></a>
@@ -147,7 +147,7 @@
                 Records in the early 2000s, producing singles for several
                 mainstream artists.
               </h2>
-              <img src="../resources/kanye.jfif" alt="Kanye West" />
+              <img src="resources/kanye.jfif" alt="Kanye West" />
               <a href="#"><em>Kanye West</em></a>
           </div>
 
