--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
           </div>
         </nav>
         <div class="title-header">
-          <div class="row">
-            <div class="col-lg-6">
               <h1 class="big-heading">Artist Library</h1>
-              <h2 class="text-body-secondary">The one place to know it all</h2>
-            </div>
+              <h2 class="text-body-secondary">
+                The place to efficiently find your favorite artists' discovery
+              </h2>
           </div>
         </div>
       </div>
@@ -129,9 +128,7 @@
                 respective members. Okonma also performed on his sketch comedy
                 show Loiter Squad (2012–2014).
               </h2>
-              <img src="resources/tyler.webp" 
-                   alt="Tyler, the Creator" 
-              />
+              <img src="resources/tyler.webp" alt="Tyler, the Creator" />
               <a href="#"><em>Tyler, the Creator</em></a>
             </div>
 
@@ -141,34 +138,41 @@
                 singer, songwriter, record producer, and fashion designer. He
                 has been influential in the 21st-century development of popular
                 music and has been credited with revitalizing hip hop. West's
-                musical career has been marked by frequent stylistic
-                changes and different musical approaches. Born in Atlanta and
-                raised in Chicago, West gained fame as a producer for Roc-A-Fella
-                Records in the early 2000s, producing singles for several
-                mainstream artists.
+                musical career has been marked by frequent stylistic changes and
+                different musical approaches. Born in Atlanta and raised in
+                Chicago, West gained fame as a producer for Roc-A-Fella Records
+                in the early 2000s, producing singles for several mainstream
+                artists.
               </h2>
               <img src="resources/kanye.jfif" alt="Kanye West" />
               <a href="#"><em>Kanye West</em></a>
-          </div>
+            </div>
 
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExample"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
       </section>
     </main>
