--- a/html/Kendrick_Lamar.html
+++ b/html/Kendrick_Lamar.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Artist Library - Kendrick Lamar</title>
+    <link rel="stylesheet" href="../css/artist_page.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -24,7 +25,7 @@
     <header class="colored-section">
       <div class="container-fluid">
         <nav class="navbar-header navbar navbar-expand-lg bg-body-tertiary">
-          <a class="navbar-brand" href="#">Artist Library</a>
+          <a id="webBrand" class="navbar-brand" href="../index.html">Artist Library</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -49,7 +50,7 @@
 
     <main>
       <section class="container">
-        <h1 class="big-heading">Kendrick Lamar</h1>
+        <h1 class="title-header">Kendrick Lamar</h1>
       </section>
       <section class="colored-section">
         <div
