--- a/html/Kendrick_Lamar.html
+++ b/html/Kendrick_Lamar.html
@@ -97,6 +97,7 @@
                 class="d-block w-100"
                 alt="GNX"
               />
+              <button class="btn btn-primary"><i class="fa-brands fa-spotify"></i></button>
               <h3 class="text-center">GNX</h3>
             </div>
           </div>
