--- a/html/Kendrick_Lamar.html
+++ b/html/Kendrick_Lamar.html
@@ -59,12 +59,18 @@
           data-bs-ride="carousel"
         >
           <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
+            <div class="carousel-item active" data-bs-interval="0">
               <img
                 src="../resources/Kendrick Lamar/KendrickGKMC.jpg"
                 class="d-block w-100"
                 alt="good kid, m.A.A.d city"
               />
+
+              <div class="btn-group" role="group">
+                <button type="button" class="btn btn-outline-dark"><i class="fa fa-spotify" aria-hidden="true"></i></button>
+                <button type="button" class="btn btn-outline-dark"><i class="fa fa-youtube-play" aria-hidden="true"></i></button>
+                <button type="button" class="btn btn-outline-dark">Right</button>
+              </div>
               <h3 class="text-center">good kid, m.A.A.d city</h3>
             </div>
             <div class="carousel-item" data-bs-interval="2500">
@@ -97,7 +103,6 @@
                 class="d-block w-100"
                 alt="GNX"
               />
-              <button class="btn btn-primary"><i class="fa-brands fa-spotify"></i></button>
               <h3 class="text-center">GNX</h3>
             </div>
           </div>
