update css for artist page

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 src="resources/Kendrick Lamar/Kendrick_Lamar.webp"
                 alt="Kendrick Lamar"
               />
-              <a href="Kendrick_Lamar.html"><em>Kendrick Lamar</em></a>
+              <a href="./html/Kendrick_Lamar.html"><em>Kendrick Lamar</em></a>
             </div>
 
             <div class="carousel-item container-fluid">
