--- a/html/Kendrick_Lamar.html
+++ b/html/Kendrick_Lamar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artist Library - Kendrick Lamar</title>
-    <link rel="stylesheet" href="../css/artist_page.css">
+    <link rel="stylesheet" href="../css/artist_page.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,7 +25,9 @@
     <header class="colored-section">
       <div class="container-fluid">
         <nav class="navbar-header navbar navbar-expand-lg bg-body-tertiary">
-          <a id="webBrand" class="navbar-brand" href="../index.html">Artist Library</a>
+          <a id="webBrand" class="navbar-brand" href="D:\SPCK\index.html"
+            >Artist Library</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -52,6 +54,7 @@
       <section class="container">
         <h1 class="title-header">Kendrick Lamar</h1>
       </section>
+      <h2 class="text-center">Albums</h2>
       <section class="colored-section">
         <div
           id="carouselExampleInterval"
@@ -65,37 +68,111 @@
                 class="d-block w-100"
                 alt="good kid, m.A.A.d city"
               />
-
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-outline-dark"><i class="fa fa-spotify" aria-hidden="true"></i></button>
-                <button type="button" class="btn btn-outline-dark"><i class="fa fa-youtube-play" aria-hidden="true"></i></button>
-                <button type="button" class="btn btn-outline-dark">Right</button>
+              <div class="buttons">
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://open.spotify.com/album/0Oq3mWfexhsjUh0aNNBB5u"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-spotify" aria-hidden="true"></i
+                  ></a>
+                </button>
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://music.apple.com/us/album/good-kid-m-a-a-d-city/1471277623"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-apple" aria-hidden="true"></i
+                  ></a>
+                </button>
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://www.youtube.com/playlist?list=OLAK5uy_mhYMgh1v0LpLuS0FqC693tfVkyVZK9WSQ"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-youtube" aria-hidden="true"></i
+                  ></a>
+                </button>
               </div>
-              <h3 class="text-center">good kid, m.A.A.d city</h3>
+              <h3 class="carousel-caption d-none d-md-block text-center">
+                good kid, m.A.A.d city
+              </h3>
             </div>
+
             <div class="carousel-item" data-bs-interval="2500">
               <img
                 src="../resources/Kendrick Lamar/Kendrick_Lamar_-_To_Pimp_a_Butterfly.png"
                 class="d-block w-100"
                 alt="To Pimp a Butterfly"
               />
-              <h3 class="text-center">To Pimp a Butterfly</h3>
-            </div>
-            <div class="carousel-item" data-bs-interval="2500">
-              <img
-                src="../resources/Kendrick Lamar/Kendrick_Lamar_-_Damn.png"
-                class="d-block w-100"
-                alt="DAMN."
-              />
-              <h3 class="text-center">DAMN.</h3>
+              <div class="buttons">
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://open.spotify.com/album/7ycBtnsMtyVbbwTfJwRjSP"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-spotify" aria-hidden="true"></i
+                  ></a>
+                </button>
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://music.apple.com/us/album/to-pimp-a-butterfly/1440828886"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-apple" aria-hidden="true"></i
+                  ></a>
+                </button>
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://www.youtube.com/playlist?list=OLAK5uy_n_dmtzA0IWImBN3fbUBUl_WgD-YSaMZaI"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-youtube" aria-hidden="true"></i
+                  ></a>
+                </button>
+              </div>
+              <h3 class="carousel-caption d-none d-md-block text-center">
+                To Pimp a Butterfly
+              </h3>
             </div>
             <div class="carousel-item" data-bs-interval="2500">
               <img
                 src="../resources/Kendrick Lamar/Kendrick_Lamar_-_Mr._Morale_&_the_Big_Steppers.png"
                 class="d-block w-100"
-                alt="GNX"
+                alt="Mr. Morale & the Big Steppers"
               />
-              <h3 class="text-center">Mr. Morale & the Big Steppers</h3>
+              <div class="buttons">
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://open.spotify.com/album/79ONNoS4M9tfIA1mYLBYVX"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-spotify" aria-hidden="true"></i
+                  ></a>
+                </button>
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://music.apple.com/us/album/mr-morale-the-big-steppers/1626195790"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-apple" aria-hidden="true"></i
+                  ></a>
+                </button>
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://www.youtube.com/playlist?list=OLAK5uy_mdeH-JtTLsVGDionNbEvJGtQw--uolZy8"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-youtube" aria-hidden="true"></i
+                  ></a>
+                </button>
+              </div>
+              <h3
+                class="carousel-caption d-none d-md-block text-center"
+                id="mr-morale-the-big-steppers"
+              >
+                Mr. Morale & the Big Steppers
+              </h3>
             </div>
             <div class="carousel-item" data-bs-interval="2500">
               <img
@@ -103,9 +180,40 @@
                 class="d-block w-100"
                 alt="GNX"
               />
-              <h3 class="text-center">GNX</h3>
+              <div class="buttons">
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://open.spotify.com/album/0hvT3yIEysuuvkK73vgdcW"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-spotify" aria-hidden="true"></i
+                  ></a>
+                </button>
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://music.apple.com/us/album/gnx/1781270319"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-apple" aria-hidden="true"></i
+                  ></a>
+                </button>
+                <button type="button" class="btn btn-outline-dark">
+                  <a
+                    href="https://www.youtube.com/playlist?list=OLAK5uy_nr2Gbry1tH6kks2gabRq1k3sjR0ByDnKg"
+                    target="_blank"
+                    class="text-white"
+                    ><i class="fa fa-youtube" aria-hidden="true"></i
+                  ></a>
+                </button>
+              </div>
+              <h3
+                class="carousel-caption d-none d-md-block text-center"
+              >
+                GNX
+              </h3>
             </div>
           </div>
+
           <button
             class="carousel-control-prev"
             type="button"
