--- a/html/Kendrick_Lamar.html
+++ b/html/Kendrick_Lamar.html
@@ -55,7 +55,7 @@
         <h1 class="title-header">Kendrick Lamar</h1>
       </section>
       <h2 class="text-center">Albums</h2>
-      <section class="colored-section">
+      <section class="colored-section" id="albums">
         <div
           id="carouselExampleInterval"
           class="carousel slide"
@@ -169,7 +169,7 @@
               </div>
               <h3
                 class="carousel-caption d-none d-md-block text-center"
-                id="mr-morale-the-big-steppers"
+                style="font-size: 22.5px"
               >
                 Mr. Morale & the Big Steppers
               </h3>
@@ -206,9 +206,7 @@
                   ></a>
                 </button>
               </div>
-              <h3
-                class="carousel-caption d-none d-md-block text-center"
-              >
+              <h3 class="carousel-caption d-none d-md-block text-center">
                 GNX
               </h3>
             </div>
@@ -234,6 +232,69 @@
           </button>
         </div>
       </section>
+
+      <h2 class="text-center">Biography</h2>
+      <section class="container">
+        <p>
+          Kendrick Lamar Duckworth (born June 17, 1987) is an American rapper,
+          songwriter, and record producer. Since his mainstream debut in 2012
+          with Good Kid, M.A.A.D City, Lamar has been regarded as one of the
+          most influential artists of his generation, as well as one of the
+          greatest rappers and lyricists of all time. Aside from his solo
+          career, he is also known as a member of the hip hop supergroup Black
+          Hippy alongside his Top Dawg Entertainment (TDE) label-mates Ab-Soul,
+          Jay Rock, and Schoolboy Q.
+        </p>
+        <p>
+          Raised in Compton, California, Lamar embarked on his musical career as
+          a teenager under the stage name K-Dot, releasing a mixtape that gained
+          local attention and led to his signing with indie record label Top
+          Dawg Entertainment (TDE). He began to gain recognition in 2010 after
+          his first retail release, Overly Dedicated. The following year, he
+          independently released his first studio album, Section.80, which
+          included his debut single "HiiiPoWeR". By that time, he had amassed a
+          large online following and collaborated with several prominent hip hop
+          artists.
+        </p>
+        <p>
+          Lamar's major-label debut album, Good Kid, M.A.A.D City, was released
+          in 2012 to critical acclaim. It was nominated for Album of the Year at
+          the 56th Annual Grammy Awards. In 2015, his third album To Pimp a
+          Butterfly was released to universal acclaim and was regarded as one of
+          the defining works of the 2010s decade, as well as being his most
+          successful album commercially, with sales of over 1 million copies in
+          the US. In 2016, Lamar released Untitled Unmastered, a collection of
+          unreleased demos that originated during the recording sessions for
+          Butterfly. He released his fourth album, Damn, in 2017 to further
+          acclaim; its lead single "Humble" topped the US Billboard Hot 100
+          chart.
+        </p>
+        <p>
+          Lamar has received many accolades over the course of his career,
+          including 13 Grammy Awards. Time magazine named him one of the 100
+          most influential people in the world in 2016 and 2018. In 2018, Lamar
+          won a Pulitzer Prize for his album Damn, becoming the first
+          non-classical or jazz artist to receive the award. In 2020, he
+          released the non-album single "The Heart Part 4", which contained
+          lyrics expressing his dissatisfaction with the state of the world and
+          teasing a release date of April 7. However, no album was released on
+          that date.
+        </p>
+      </section>
+
+      <section>
+        <h2 class="text-center">Collabs</h2>
+        <h4 class="text-body-secondary text-center">Coming soon!</h4>
+      </section>
+
     </main>
+
+    <footer class="colored-section">
+      <div class="container-fluid">
+        <p class="text-center">
+          &copy; 2025 Artist Library. All rights reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
