--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://kit.fontawesome.com/444b27dfe0.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="colored-section">
@@ -34,8 +31,7 @@
             data-bs-target="#navbarNav"
             aria-controls="navbarNav"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <i class="fa-solid fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -53,11 +49,10 @@
           </div>
         </nav>
         <div class="title-header">
-              <h1 class="big-heading">Artist Library</h1>
-              <h2 class="text-body-secondary">
-                The place to efficiently find your favorite artists' discovery
-              </h2>
-          </div>
+          <h1 class="big-heading">Artist Library</h1>
+          <h2 class="text-body-secondary">
+            The place to efficiently find your favorite artists' discovery
+          </h2>
         </div>
       </div>
     </header>
@@ -110,8 +105,7 @@
               </h2>
               <img
                 src="resources/Kendrick Lamar/Kendrick_Lamar.webp"
-                alt="Kendrick Lamar"
-              />
+                alt="Kendrick Lamar" />
               <a href="./html/Kendrick_Lamar.html"><em>Kendrick Lamar</em></a>
             </div>
 
@@ -152,24 +146,20 @@
               class="carousel-control-prev"
               type="button"
               data-bs-target="#carouselExample"
-              data-bs-slide="prev"
-            >
+              data-bs-slide="prev">
               <span
                 class="carousel-control-prev-icon"
-                aria-hidden="true"
-              ></span>
+                aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
             <button
               class="carousel-control-next"
               type="button"
               data-bs-target="#carouselExample"
-              data-bs-slide="next"
-            >
+              data-bs-slide="next">
               <span
                 class="carousel-control-next-icon"
-                aria-hidden="true"
-              ></span>
+                aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
           </div>
@@ -178,7 +168,7 @@
     </main>
     <footer>
       <div class="footer">
-        <p>&copy; 2025</p>
+        <p>&copy; 2025 Artist Library. All rights reserved.</p>
       </div>
     </footer>
   </body>
