--- a/html/register.html
+++ b/html/register.html
@@ -17,8 +17,7 @@
         type="password"
         name="confirm_password"
         placeholder="Confirm Password"
-        required
-      />
+        required />
       <button type="submit">Register</button>
     </form>
   </body>
