--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="register.html">Register</a>
+                <a class="nav-link" href="./html/register.html">Register</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="sign_in.html">Sign in</a>
+                <a class="nav-link" href="./html/sign_in.html">Sign in</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="./index.html">Home</a>
               </li>
             </ul>
           </div>
@@ -104,7 +104,7 @@
                 receive the honor.
               </h2>
               <img
-                src="resources/Kendrick Lamar/Kendrick_Lamar.webp"
+                src="./resources/Kendrick Lamar/Kendrick_Lamar.webp"
                 alt="Kendrick Lamar" />
               <a href="./html/Kendrick_Lamar.html"><em>Kendrick Lamar</em></a>
             </div>
@@ -122,8 +122,8 @@
                 respective members. Okonma also performed on his sketch comedy
                 show Loiter Squad (2012–2014).
               </h2>
-              <img src="resources/tyler.webp" alt="Tyler, the Creator" />
-              <a href="#"><em>Tyler, the Creator</em></a>
+              <img src="./resources/Tyler, the Creator/tyler_the_creator.webp" alt="Tyler, the Creator" />
+              <a href="./html/Tyler_the_Creator.html"><em>Tyler, the Creator</em></a>
             </div>
 
             <div class="carousel-item container-fluid">
@@ -138,8 +138,8 @@
                 in the early 2000s, producing singles for several mainstream
                 artists.
               </h2>
-              <img src="resources/kanye.jfif" alt="Kanye West" />
-              <a href="#"><em>Kanye West</em></a>
+              <img src="./resources/Kanye West/kanye_west.jfif" alt="Kanye West" />
+              <a href="./html/Kanye West.html"><em>Kanye West</em></a>
             </div>
 
             <button
