--- a/html/Kendrick_Lamar.html
+++ b/html/Kendrick_Lamar.html
@@ -9,25 +9,21 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://kit.fontawesome.com/444b27dfe0.js"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="colored-section">
       <div class="container-fluid">
         <nav class="navbar-header navbar navbar-expand-lg bg-body-tertiary">
-          <a id="webBrand" class="navbar-brand" href="D:\SPCK\index.html"
-            >Artist Library</a
-          >
+          <a id="webBrand" class="navbar-brand" href="../index.html">Artist
+            Library</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -35,14 +31,13 @@
             data-bs-target="#navbarNav"
             aria-controls="navbarNav"
             aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+            aria-label="Toggle navigation">
             <i class="fa-solid fa-bars"></i>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="../index.html">Home</a>
               </li>
             </ul>
           </div>
@@ -59,39 +54,34 @@
         <div
           id="carouselExampleInterval"
           class="carousel slide"
-          data-bs-ride="carousel"
-        >
+          data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="0">
               <img
                 src="../resources/Kendrick Lamar/KendrickGKMC.jpg"
                 class="d-block w-100"
-                alt="good kid, m.A.A.d city"
-              />
+                alt="good kid, m.A.A.d city" />
               <div class="buttons">
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://open.spotify.com/album/0Oq3mWfexhsjUh0aNNBB5u"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-spotify" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-spotify"
+                      aria-hidden="true"></i></a>
                 </button>
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://music.apple.com/us/album/good-kid-m-a-a-d-city/1471277623"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-apple" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-apple"
+                      aria-hidden="true"></i></a>
                 </button>
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://www.youtube.com/playlist?list=OLAK5uy_mhYMgh1v0LpLuS0FqC693tfVkyVZK9WSQ"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-youtube" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-youtube"
+                      aria-hidden="true"></i></a>
                 </button>
               </div>
               <h3 class="carousel-caption d-none d-md-block text-center">
@@ -103,32 +93,28 @@
               <img
                 src="../resources/Kendrick Lamar/Kendrick_Lamar_-_To_Pimp_a_Butterfly.png"
                 class="d-block w-100"
-                alt="To Pimp a Butterfly"
-              />
+                alt="To Pimp a Butterfly" />
               <div class="buttons">
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://open.spotify.com/album/7ycBtnsMtyVbbwTfJwRjSP"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-spotify" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-spotify"
+                      aria-hidden="true"></i></a>
                 </button>
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://music.apple.com/us/album/to-pimp-a-butterfly/1440828886"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-apple" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-apple"
+                      aria-hidden="true"></i></a>
                 </button>
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://www.youtube.com/playlist?list=OLAK5uy_n_dmtzA0IWImBN3fbUBUl_WgD-YSaMZaI"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-youtube" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-youtube"
+                      aria-hidden="true"></i></a>
                 </button>
               </div>
               <h3 class="carousel-caption d-none d-md-block text-center">
@@ -139,38 +125,33 @@
               <img
                 src="../resources/Kendrick Lamar/Kendrick_Lamar_-_Mr._Morale_&_the_Big_Steppers.png"
                 class="d-block w-100"
-                alt="Mr. Morale & the Big Steppers"
-              />
+                alt="Mr. Morale & the Big Steppers" />
               <div class="buttons">
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://open.spotify.com/album/79ONNoS4M9tfIA1mYLBYVX"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-spotify" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-spotify"
+                      aria-hidden="true"></i></a>
                 </button>
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://music.apple.com/us/album/mr-morale-the-big-steppers/1626195790"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-apple" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-apple"
+                      aria-hidden="true"></i></a>
                 </button>
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://www.youtube.com/playlist?list=OLAK5uy_mdeH-JtTLsVGDionNbEvJGtQw--uolZy8"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-youtube" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-youtube"
+                      aria-hidden="true"></i></a>
                 </button>
               </div>
               <h3
                 class="carousel-caption d-none d-md-block text-center"
-                style="font-size: 22.5px"
-              >
+                style="font-size: 22.5px">
                 Mr. Morale & the Big Steppers
               </h3>
             </div>
@@ -178,32 +159,28 @@
               <img
                 src="../resources/Kendrick Lamar/Kendrick_Lamar_-_GNX.png"
                 class="d-block w-100"
-                alt="GNX"
-              />
+                alt="GNX" />
               <div class="buttons">
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://open.spotify.com/album/0hvT3yIEysuuvkK73vgdcW"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-spotify" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-spotify"
+                      aria-hidden="true"></i></a>
                 </button>
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://music.apple.com/us/album/gnx/1781270319"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-apple" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-apple"
+                      aria-hidden="true"></i></a>
                 </button>
                 <button type="button" class="btn btn-outline-dark">
                   <a
                     href="https://www.youtube.com/playlist?list=OLAK5uy_nr2Gbry1tH6kks2gabRq1k3sjR0ByDnKg"
                     target="_blank"
-                    class="text-white"
-                    ><i class="fa fa-youtube" aria-hidden="true"></i
-                  ></a>
+                    class="text-white"><i class="fa fa-youtube"
+                      aria-hidden="true"></i></a>
                 </button>
               </div>
               <h3 class="carousel-caption d-none d-md-block text-center">
@@ -216,8 +193,7 @@
             class="carousel-control-prev"
             type="button"
             data-bs-target="#carouselExampleInterval"
-            data-bs-slide="prev"
-          >
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
           </button>
@@ -225,8 +201,7 @@
             class="carousel-control-next"
             type="button"
             data-bs-target="#carouselExampleInterval"
-            data-bs-slide="next"
-          >
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
           </button>
