--- a/html/register.html
+++ b/html/register.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
     <link rel="stylesheet" href="../css/register.css" />
-    <script src="../js/register.js" defer></script>
+    <script src="../script/register.js" defer></script>
   </head>
   <body>
-    <form class="register-form" action="index.html" method="post">
+    <form class="register-form" action="../index.html" method="post">
       <h2>Register</h2>
       <input type="text" name="username" placeholder="Username" required />
       <input type="email" name="email" placeholder="Email" required />
