update index.html and css/index.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
         <!-- Navigation bar  -->
         <nav class="navbar-header navbar navbar-expand-lg bg-body-tertiary">
-          <a class="navbar-brand" href="#">Artist Library</a>
+          <a class="navbar-brand" href="#" id="webBrand">Artist Library</a>
           <button
             class="navbar-toggler"
             type="button"
