--- a/html/Kendrick_Lamar.html
+++ b/html/Kendrick_Lamar.html
@@ -264,7 +264,7 @@
 
     </main>
 
-    <footer class="colored-section">
+    <footer class="colored-section" id="footer">
       <div class="container-fluid">
         <p class="text-center">
           &copy; 2025 Artist Library. All rights reserved.
