--- a/html/Tyler_the_Creator.html
+++ b/html/Tyler_the_Creator.html
@@ -274,7 +274,7 @@
                         2015, Tyler released his fourth album, Cherry Bomb,
                         which featured guest appearance from artists such as
                         Lil Wayne and Kanye West. In 2017, Okonma released
-                        Flower Boy, followed by subsequent albums Igor
+                        Flower Boy, followed by subsequent albums IGOR
                         (2019) and Call Me If You Get Lost (2021), all of
                         which earned him widespread critical acclaim and
                         commercial success, with the latter two albums
